P4-1: fix startup perf — remove eager attach from list/detail paths
Fix A (getLocalVirtualMachine): remove getAllVirtualMachines() scan.
  Use VirtualMachine.list() for displayName only (no attach), then
  attach solely to the requested vmid.

Fix B (getAttachableVMs): remove VirtualMachine.attach() from list
  building. VirtualMachineDescriptor provides id+displayName without
  any IPC. Records attachable=true, address=null for all descriptors.
  The JMX connector address is resolved lazily per-VM when
  ProxyClient.connect() calls startManagementAgent().

Root cause (confirmed via thread dumps a.txt/b.txt/c.txt):
  getLocalVirtualMachine(vmid) called getAllVirtualMachines() ->
  getAttachableVMs() -> VirtualMachine.attach() on EVERY VM on the
  system. 4 slow VMs x ~10.6 s attach timeout = ~42 s startup delay.

Column impact: none. address=null was already the code path for VMs
  without a running JMX agent; startManagementAgent() handles it
  on first overview refresh. §6.3 all pass.